<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/MainSearchButtonSearch"
        android:layout_width="97dp"
        android:layout_height="48dp"
        android:backgroundTint="@android:color/black"
        android:text="@string/MainSearchButtonSearch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.958"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.084" />

    <EditText
        android:id="@+id/MainFragmentKeywordSearch"
        android:layout_width="248dp"
        android:layout_height="58dp"
        android:gravity="bottom"
        android:hint="@string/MainSearchEditText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.071" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/MainFragmentRecyclerView"
        android:layout_width="385dp"
        android:layout_height="531dp"
        app:layout_constraintBottom_toBottomOf="@+id/MainAddEntryButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.64"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MainFragmentKeywordSearch" />

    <Button
        android:id="@+id/MainAddEntryButton"
        android:layout_width="175dp"
        android:layout_height="35dp"
        android:layout_marginBottom="8dp"
        android:text="@string/MainAddEntryButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/MainTextViewNoOfHits"
        android:layout_width="33dp"
        android:layout_height="55dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.698"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.11" />

</androidx.constraintlayout.widget.ConstraintLayout>