<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Spinner
        android:id="@+id/ContextSearchSpinnerSections"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="33dp"
        app:layout_constraintBottom_toTopOf="@+id/ContextSearchRecyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.149"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/ContextSearchButtonSearch"
        android:layout_width="113dp"
        android:layout_height="48dp"
        android:backgroundTint="@android:color/black"
        android:text="@string/ContextSearchButtonSearch"
        app:layout_constraintBottom_toTopOf="@+id/ContextSearchRecyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.912"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.182" />

    <EditText
        android:id="@+id/ContextSearchTitleEditText"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="12dp"
        android:hint="@string/ContextSearchTitleEditText"
        app:layout_constraintBottom_toTopOf="@+id/ContextSearchRecyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintStart_toStartOf="parent" />

    <AutoCompleteTextView
        android:id="@+id/ContextSearchCategoryEditText"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="12dp"
        android:hint="@string/ContextSearchCategoryEditText"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/ContextSearchRecyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintStart_toStartOf="parent" />

    <AutoCompleteTextView
        android:id="@+id/ContextSearchSubcategoryEditText"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="12dp"
        android:hint="@string/ContextSearchSubcategoryEditText"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/ContextSearchRecyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/ContextSearchDescriptionEditText"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="12dp"
        android:hint="@string/ContextSearchDescriptionEditText"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/ContextSearchRecyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/ContextSearchTextViewNoOfHits"
        android:layout_width="32dp"
        android:layout_height="39dp"
        android:width="30dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/ContextSearchRecyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.894"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ContextSearchButtonSearch"
        app:layout_constraintVertical_bias="0.674" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ContextSearchRecyclerView"
        android:layout_width="376dp"
        android:layout_height="502dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="1dp"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ContextSearchButtonToHome"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:text="@string/ContextSearchButtonToHome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <EditText
        android:id="@+id/ContextSearchEditTextDateFrom"
        android:layout_width="139dp"
        android:layout_height="44dp"
        android:ems="10"
        android:inputType="date"
        android:visibility="gone"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.122" />

    <EditText
        android:id="@+id/ContextSearchEditTextDateTo"
        android:layout_width="140dp"
        android:layout_height="41dp"
        android:ems="10"
        android:inputType="date"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.701"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.126" />


</androidx.constraintlayout.widget.ConstraintLayout>